tests/od2trips/errors/incomplete_districts/to_missing1of2/errors.od2trips
Error: Missing destination '3' (24.00 vehicles).
Error: Loading failed.
Quitting (on error).
